--- a/stylemodules/header.module.css
+++ b/stylemodules/header.module.css
@@ -14,6 +14,7 @@
   color: #8832b0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   border-radius: 8px;
+  background-color: #3d3d3d;
 }
 
 .searchbox {
@@ -27,4 +28,5 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   border-radius: 8px;
+  background-color: #3d3d3d;
 }
